<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/cre_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="43dp"
        android:text="@string/login_credentials_title"
        android:textColor="@color/colorWhite"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="312dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email_edit_text"
            style="@style/WhiteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="@string/login_credentials_email_hint"
            android:inputType="textEmailAddress" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password_edit_text"
            style="@style/WhiteEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:hint="@string/login_credentials_password_hint"
            android:inputType="textPassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_credentials_login_button" />

    </LinearLayout>

</LinearLayout>
