<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/colorWhite">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/close_dialog_button"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignTop="@+id/dialog_title_text_view"
            android:layout_alignBottom="@+id/dialog_title_text_view"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_cross"
            android:tint="@color/colorPrimary" />

        <TextView
            android:id="@+id/dialog_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/assign_device_success_title"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="50dp"
        android:paddingBottom="50dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:gravity="center">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="5dp"
            android:background="@drawable/bg_circle"
            android:src="@drawable/ic_check_mark"
            android:tint="@color/colorAccent"
            android:backgroundTint="@color/colorBlueGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_device_success_message_1"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="32dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/assign_device_success_message_2"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="16dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_in_button"
            style="@style/BlueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/assign_device_success_sign_in"
            android:layout_marginTop="35dp" />

    </LinearLayout>

</LinearLayout>